# cuems-videocomposer

./: .gitignore  .gitmodules  ARCHITECTURE.md  AUDIO_INDEXING_EVALUATION.md  BACKGROUND_INDEXING_EVALUATION.md  BUILD_FFMPEG.md  CMakeLists.txt  COMPLETION_SUMMARY.md  CONCURRENT_FILE_ACCESS_EVALUATION.md  EVALUATION_RESUME.md  EVALUATION_RESUME_CONCISE.md  HAP Direct DXT Texture Upload Optimiza.md  HAP_BUILD_VERIFICATION.md  HAP_IMPLEMENTATION_SUMMARY.md  HAP_TESTING_GUIDE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  INDEXING_COMPARISON.md  INTEGRATION_SUMMARY.md  LEGACY_C_CODE_STATUS.md  MIDI_MIGRATION_NOTES.md  MIDI_TESTING.md  MIGRATION_COMPLETE_SUMMARY.md  MIGRATION_STATUS.md  MIGRATION_STRATEGY_ANALYSIS.md  MIGRATION_SUMMARY.md  MULTI_LAYER_FIXES.md  MULTI_LAYER_STATUS.md  NO_INDEXING_CODECS_EVALUATION.md  OPTIMIZATIONS_APPLIED.md  PERFORMANCE_ANALYSIS.md  PLAN_COMPLETION_STATUS.md  REFACTORING_PLAN.md  REFINED_PLAN.md  SHARED_LIBRARY_FILE_SHARING_EVALUATION.md  SINGLE_FILE_READ_APPROACHES.md  TESTING_SHADER_WARPING.md  TIMECODE_SYNC_CONCURRENT_ACCESS.md  TODO_SMOOTHNESS.md  ZERO_COPY_EVALUATION.md  (+5 more)
.cursor/plans/: dynamic-video-file-management-51f97d72.plan.md  hap-async-prebuffer.plan.md  multi-display-implementation.plan.md  ndi-input-support.plan.md  ndi-output-support.plan.md  oscquery-integration.plan.md  rendering-optimizations.plan.md  vaapi-deferred-binding.plan.md
debian/: BUILD-INSTRUCTIONS.md  NDI-COMPLIANCE-SUMMARY.md  README.Debian  changelog  control  copyright  install  rules
debian/ndi-compliance/: EULA  README
scripts/: README.md  cuems-videocomposer-wrapper.sh
src/: cuems_errors.h
src/cuems_videocomposer/: common.c  configfile.c  cuems_videocomposer.h  display.c  display.h  display_gl_common.h  display_glx.c  display_x11.c  display_x_dialog.c  display_x_dnd.c  ffcompat.h  freetype.c  gtime.c  gtime.h  homography.h  libsofd.c  midi.c  mqueue.c  paths.h  remote.c  weak_libjack.h  xjadeo  xjadeo.c  xjosc.c  xjremote  xjremote.c
src/cuems_videocomposer/cpp/: VideoComposerApplication.cpp  VideoComposerApplication.h  main.cpp
src/cuems_videocomposer/cpp/config/: ConfigurationManager.cpp  ConfigurationManager.h
src/cuems_videocomposer/cpp/display/: CPUImageProcessor.cpp  CPUImageProcessor.h  DisplayBackend.h  DisplayConfiguration.cpp  DisplayConfiguration.h  DisplayConfigurationManager.cpp  DisplayConfigurationManager.h  DisplayManager.cpp  DisplayManager.h  GPUImageProcessor.cpp  GPUImageProcessor.h  HapShaders.h  HeadlessDisplay.cpp  HeadlessDisplay.h  ImageProcessor.h  MasterProperties.h  MultiOutputRenderer.cpp  MultiOutputRenderer.h  OpenGLDisplay.cpp  OpenGLDisplay.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OutputBlitShader.cpp  OutputBlitShader.h  OutputConfig.h  OutputInfo.h  OutputRegion.h  ShaderProgram.cpp  ShaderProgram.h  VideoShaders.h  VirtualCanvas.cpp  VirtualCanvas.h  WaylandDisplay.cpp  WaylandDisplay.h  X11Display.cpp  X11Display.h  XineramaHelper.cpp  XineramaHelper.h
src/cuems_videocomposer/cpp/display/drm/: DRMBackend.cpp  DRMBackend.h  DRMOutputManager.cpp  DRMOutputManager.h  DRMSurface.cpp  DRMSurface.h  (+4 more)
src/cuems_videocomposer/cpp/hap/: HapDecoder.cpp  HapDecoder.h
src/cuems_videocomposer/cpp/hwdec/: VaapiInterop.cpp  VaapiInterop.h
src/cuems_videocomposer/cpp/input/: AsyncDecodeQueue.cpp  AsyncDecodeQueue.h  AsyncVideoLoader.cpp  AsyncVideoLoader.h  FFmpegLiveInput.cpp  FFmpegLiveInput.h  HAPVideoInput.cpp  HAPVideoInput.h  HardwareDecoder.cpp  HardwareDecoder.h  InputSource.h  LiveInputSource.cpp  LiveInputSource.h  NDIVideoInput.cpp  NDIVideoInput.h  VideoFileInput.cpp  VideoFileInput.h
src/cuems_videocomposer/cpp/layer/: LayerDisplay.cpp  LayerDisplay.h  LayerManager.cpp  LayerManager.h  LayerPlayback.cpp  LayerPlayback.h  LayerProperties.h  VideoLayer.cpp  VideoLayer.h
src/cuems_videocomposer/cpp/osd/: OSDManager.cpp  OSDManager.h  OSDRenderer.cpp  OSDRenderer.h
src/cuems_videocomposer/cpp/output/: FrameCapture.cpp  FrameCapture.h  OutputSink.h  OutputSinkManager.cpp  OutputSinkManager.h
src/cuems_videocomposer/cpp/remote/: OSCQueryServer.cpp  OSCQueryServer.h  OSCRemoteControl.cpp  OSCRemoteControl.h  RemoteCommandRouter.cpp  RemoteCommandRouter.h  RemoteControl.h
src/cuems_videocomposer/cpp/sync/: ALSASeqMIDIDriver.cpp  ALSASeqMIDIDriver.h  FramerateConverterSyncSource.cpp  FramerateConverterSyncSource.h  LTCSyncSource.h  MIDIDriver.cpp  MIDIDriver.h  MIDISyncSource.cpp  MIDISyncSource.h  MTCDecoder.cpp  MTCDecoder.h  MtcReceiverMIDIDriver.cpp  MtcReceiverMIDIDriver.h  NullMIDIDriver.h  SyncSource.h
src/cuems_videocomposer/cpp/test/: TestConfigurationManager.cpp  TestFramework.h  TestIntegration.cpp  TestLayerManager.cpp  TestMIDI.cpp  TestMIDI_Python.cpp  TestMTCDecoder.cpp  TestMain.cpp  TestVideoLayer.cpp
src/cuems_videocomposer/cpp/utils/: CLegacyBridge.h  Logger.h  MIDIBridge.cpp  SMPTEUtils.cpp  SMPTEUtils.h  SMPTEWrapper.cpp  SMPTEWrapper.h  TimeUtils.cpp  TimeUtils.h
src/cuems_videocomposer/cpp/video/: FrameBuffer.cpp  FrameBuffer.h  FrameFormat.h  GPUTextureFrameBuffer.cpp  GPUTextureFrameBuffer.h
src/mtcreceiver/: CMakeLists.txt
src/qt-gui/: qjadeo.cpp
tests/: BUILD_FFMPEG_HAP_Q_ALPHA.md  CREATE_HAP_TEST_FILES.md  FFMPEG_HAP_Q_ALPHA_PATCH.md  FFMPEG_HAP_Q_ALPHA_STATUS.md  FIND_HAP_Q_ALPHA_SAMPLES.md  HAP_FOURCC_REFERENCE.md  NDI_DISCOVERY_IMPLEMENTED.md  NDI_QUICK_START.md  NDI_TESTING_GUIDE.md  NDI_TEST_EXAMPLES.md  OFFICIAL_HAP_SAMPLES.md  README.md  README_CODEC_TESTS.md  README_NDI.md  TEST_FILES_SUMMARY.md  build_vaapi_test.sh  create_hap_q_alpha.sh  create_playback_test_video.sh  create_test_videos.sh  download_hap_official_samples.sh  download_hap_samples.sh  mtc_helper.py  test_codec_formats.py  test_dynamic_file_management.py  test_h264_hardware_decoding.py  test_hap_direct.py  test_mtc_integration.py  test_ndi_discovery.py  test_ndi_input.py  test_osd_all.py  test_osd_box.py  test_osd_options.py  test_resolution_modes.py  test_shader_warping.py  test_simple_multilayer.py  test_virtual_canvas_features.py  vaapi_egl_minimal_test.cpp  vaapi_egl_test
